--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 											<a href="https://www.powerbi.com/links/9nbjQ5g52R?ctid=522b884d-7f78-410e-bbf9-650dac5b72fc&pbi_source=linkShare" class="special">View on PowerBi</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/decisiontree.png" alt="" /></a>
+											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/Mod'in_houses.ipynb" class="image"><img src="images/decisiontree.png" alt="" /></a>
 											<h3 class="major">Python decision tree machine learning</h3>
-											<p>Make (y) prediction based on (x) features, cars/houses prices for example</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Sale of apartments in Modi'in 2019 random tree and forests</p>
+											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/Mod'in_houses.ipynb" class="special">View project</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/NoSQL_.jpg" alt="" /></a>
