--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">More project ideas coming soon</h2>
+									<h2 class="major">More projects</h2>
 									<p> Here is where i want to put more complete and cool projects, i love data science and the endless possiblities and the cool things you can make out of ugly-long CSV tables into meaningful results!</p>
 									<section class="features">
 										<article>
@@ -113,7 +113,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Follow me for more data analyst | data scientist incoming projects </p>
+							<p>Follow me for more data analyst / data scientist incoming projects </p>
 							
 								</ul>
 							</form>
@@ -122,9 +122,9 @@
 									Israel, Jerusalem
 								</li>
 								<li class="icon solid fa-phone">0549843922</li>
-								<li class="icon solid fa-envelope"><a href="#">abedwaz@icloud.com</a></li>
+								<li class="icon solid fa-envelope"><a >abedwaz@icloud.com</a></li>
 							    <li class="icon brands fa-github"><a href="https://github.com/Abed-the-analyst">github.com/Abed-the-analyst</a></li>
-							    <li class="icon brands fa-linkedin"><a href="#">linkedin not yet available</a></li>
+							    <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/abed-wazwaz-514b63244">Linkedin</a></li>
 							</li>
 							</ul>
 						</div>
