--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/movie.ipynb" class="image"><img src="images/Positive-Correlation.webp" alt="" /></a>
+									<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/Fraud.ipynb" class="image"><img src="images/dataset-cover.jpeg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Correlation in python</h2>
-										<p>Using Python pandas, numpy, matplotlib to find the highest feature that influence gross earnings in movies database</p>
-										<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/movie.ipynb" class="special">View project</a>
+										<h2 class="major">Fraud Flagging</h2>
+										<p>Using Python, sci-kit library to build various basic models to flag suspecious transactions.</p>
+										<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/Fraud.ipynb" class="special">View project</a>
 									</div>
 								</div>
 							</section>
@@ -79,7 +79,7 @@
 										<article>
 											<a href="https://www.powerbi.com/links/9nbjQ5g52R?ctid=522b884d-7f78-410e-bbf9-650dac5b72fc&pbi_source=linkShare" class="image"><img src="images/data-visualization.jpeg" alt="" /></a>
 											<h3 class="major">PowerBi</h3>
-											<p>Building dashboard reports using Microsoft PowerBi </p>
+											<p>Building dashboard reports using Microsoft PowerBi, Microsoft account login is required. </p>
 											<a href="https://www.powerbi.com/links/9nbjQ5g52R?ctid=522b884d-7f78-410e-bbf9-650dac5b72fc&pbi_source=linkShare" class="special">View on PowerBi</a>
 										</article>
 										<article>
@@ -89,10 +89,10 @@
 											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/Mod'in_houses.ipynb" class="special">View project</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/NoSQL_.jpg" alt="" /></a>
-											<h3 class="major">NoSQL</h3>
-											<p>Using mongoDB to access to queries efficiently!</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/movie.ipynb" class="image"><img src="images/Positive-Correlation.webp" alt="" /></a>
+											<h3 class="major">Correlation in python</h3>
+											<p>Using Python pandas, numpy, matplotlib to find the highest feature that influence gross earnings in movies database</p>
+											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/movie.ipynb" class="special">View project</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/Tableau-.png" alt="" /></a>
@@ -113,7 +113,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Follow me for more data analyst / data scientist incoming projects </p>
+							<p>contact me for data analyst / data scientist projects </p>
 							
 								</ul>
 							</form>
@@ -122,7 +122,7 @@
 									Israel, Jerusalem
 								</li>
 								<li class="icon solid fa-phone">0549843922</li>
-								<li class="icon solid fa-envelope"><a >abedwaz@icloud.com</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:abedw.11@gmail.com">abedw.11@gmail.com</a>></a></li>
 							    <li class="icon brands fa-github"><a href="https://github.com/Abed-the-analyst">github.com/Abed-the-analyst</a></li>
 							    <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/abed-wazwaz-514b63244">Linkedin</a></li>
 							</li>
