--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 											<a href="https://github.com/Abed-the-analyst/Python-ML/blob/main/movie.ipynb" class="special">View project</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Tableau-.png" alt="" /></a>
+											<a href="https://public.tableau.com/app/profile/abed4905/viz/Book1_16590220087410/TotalperCat?publish=yes" class="image"><img src="images/Tableau-.png" alt="" /></a>
 											<h3 class="major">Tableau</h3>
 											<p>Another data visualization tool to build real dashboards</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://public.tableau.com/app/profile/abed4905/viz/Book1_16590220087410/TotalperCat?publish=yes" class="special">View project</a>
 										</article>
 									</section>
 									<ul class="actions">
