Removed my phonenumber 😊😊

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 								<li class="icon solid fa-home">
 									Israel, Jerusalem
 								</li>
-								<li class="icon solid fa-phone">0549843922</li>
-								<li class="icon solid fa-envelope"><a href="mailto:abedw.11@gmail.com">abedw.11@gmail.com</a>></a></li>
+								<!--li class="icon solid fa-phone">054</li>-->
+								<li class="icon solid fa-envelope"><a href="mailto:abedw.11@gmail.com">abedw.11@gmail.com</a></a></li>
 							    <li class="icon brands fa-github"><a href="https://github.com/Abed-the-analyst">github.com/Abed-the-analyst</a></li>
 							    <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/abed-wazwaz-514b63244">Linkedin</a></li>
 							</li>
